<resources>
    <string name="app_name">LoginUI</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">FORGET PASSWORD?</string>
    <string name="name">Name</string>
    <string name="email_reg">Email</string>
    <string name="phone">Phone</string>
    <string name="phone1">Phone</string>
    <string name="pass_reg">Password</string>
    <string name="signup">SignUp</string>
    <string name="already">Already have an account?</string>
</resources>